--- a/lab1-Skeleton/README
+++ b/lab1-Skeleton/README
@@ -1,4 +1,5 @@
-This is a skeleton for CS 111 Lab 1.
+Contributors: Bryan Ngo (UID: 503901486)
+              Rachel Fang (UID: 104001868)
 
-Replace this README file with notes on your implementation.
-Mentions any special features or limitations.
+Assumptions Made: Printing of subshells is also broken down, and not printed in one line
+Known Limitations: likely to be memory leaks
